final addition of tipo sin encanto website

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="image-con fade-in">
-                    <img>
+                    <img src="assets/61c68aab-136b-43a6-9278-02f3bc0eaac1.JPG">
                 </div>
             </div>
         </section>
